compiler/testData/cli/jvm/k2ValRedeclaration.kt
class Foo {
    fun getY() {
        val someVal = "One"
        val someVal = 42
        println(someVal)
    }
}